syntax = "proto3";

package hello;

service Hello {
    rpc SendHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    bool status = 1;
    string message = 2;
}